# CodeMeld

./: .gitignore  .pip-audit.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  combined_project.txt  main.py  project.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sonar-project.properties  test.txt
.github/workflows/: python-app.yml
custom_formatter_example/: README.md  pyproject.toml
custom_formatter_example/src/my_formatter/: formatter.py
docs/: README.md  proposal_granular_inclusion.md  refactoring_review_checklist.md  static_analysis.md  todo_checklist.md
docs/adr/: 001-use-makefile-for-build-automation.md
src/: __init__.py  _types.py  code_combiner.py  config.py  config_builder.py  config_validator.py  context.py  filters.py  formatters.py  memory_monitor.py  observers.py  output_generator.py  py.typed  types.py  ui.py  utils.py
tests/: conftest.py  test_benchmark.py  test_code_combiner.py
tests/integration/: test_always_include_safety.py  test_cli_end_to_end.py  test_config_override.py  test_end_to_end.py  test_format_conversion.py  test_large_files.py  test_scan_and_combine_basic.py  test_symlinks.py
tests/performance/: test_benchmarks.py
tests/regression/: test_malformed_config.py  test_permission_errors.py
tests/unit/: conftest.py  test_code_combiner.py  test_code_combiner_always_include.py  test_code_combiner_execution.py  test_code_combiner_extra.py  test_code_combiner_gitignore.py  test_code_combiner_scanning.py  test_composite_filters.py  test_config_builder.py  test_config_builder_extra.py  test_ui.py  (+16 more)
