[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-code-combiner-formatter"
version = "0.0.1"
authors = [
    { name="Example Author", email="author@example.com" },
]
description = "An example custom formatter for the code-combiner script."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."code_combiner.formatters"]
yaml = "my_formatter.formatter:YAMLFormatter"
